FIxed some spacing on flex

--- a/blog.css
+++ b/blog.css
@@ -58,7 +58,7 @@ a{
 
 
 .posts {
-    flex:0 1 65%;
+    flex:0 0 65%;
     display:flex;
     flex-wrap:wrap;
     justify-content: center;
@@ -67,7 +67,7 @@ a{
 }
 
 .posts article {
-    flex:0 1 40%;
+    flex:0 0 40%;
     margin:2em 1em 2.5em 2em;
     /* DO NOT CHANGE THESE */
     background-color: #dddddd;
@@ -76,7 +76,7 @@ a{
 }
 
 .sidebar {
-    flex:0 1 15%;
+    flex:0 0 15%;
     padding:.5em;
     display:flex;
     flex-direction:column;
